Bug 512085 - Flathub-packaged Dragon Player crashes on close in QInputMethod::commit() after seeking to anywhere in the video
Summary: Flathub-packaged Dragon Player crashes on close in QInputMethod::commit() aft...
Status: RESOLVED FIXED
Alias: None
Product: dragonplayer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.08.3
Platform: Flatpak Linux
: NOR crash
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 511615 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-11-14 15:11 UTC by Nate Graham
Modified: 2025-11-19 06:03 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2025-11-14 15:11:00 UTC
STEPS TO REPRODUCE
1. Install Dragon Player from Flathub
2. Open any video file
3. Click the seek bar a few times to seek to later positions in the video
4. Close the app by any method (Click close button, Ctrl+Q, Alt+F4)


OBSERVED RESULT
The app crashes on quit:

#0  0x00007fd63841c624 in QInputMethod::commit() () at /usr/lib/x86_64-linux-gnu/libQt6Gui.so.6
#1  0x00007fd632a28c94 in QQuickDeliveryAgentPrivate::clearFocusInScope(QQuickItem*, QQuickItem*, Qt::FocusReason, QFlags<QQuickDeliveryAgentPrivate::FocusOption>) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#2  0x00007fd6328329b8 in QQuickItem::setParentItem(QQuickItem*) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#3  0x00007fd631b46823 in QQuickPopupPrivate::setWindow(QQuickWindow*) ()
    at /usr/lib/x86_64-linux-gnu/libQt6QuickTemplates2.so.6
#4  0x00007fd637c1222e in ??? () at /usr/lib/x86_64-linux-gnu/libQt6Core.so.6
#5  0x00007fd6328185b4 in QQuickItem::windowChanged(QQuickWindow*) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#6  0x00007fd631b196d3 in QQuickControl::itemChange(QQuickItem::ItemChange, QQuickItem::ItemChangeData const&) () at /usr/lib/x86_64-linux-gnu/libQt6QuickTemplates2.so.6
#7  0x00007fd631af3b0e in QQuickAbstractButton::itemChange(QQuickItem::ItemChange, QQuickItem::ItemChangeData const&) () at /usr/lib/x86_64-linux-gnu/libQt6QuickTemplates2.so.6
#8  0x00007fd63282f4ec in QQuickItemPrivate::derefWindow() ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#9  0x00007fd63282f498 in QQuickItemPrivate::derefWindow() ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#10 0x00007fd632832cdf in QQuickItem::setParentItem(QQuickItem*) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#11 0x00007fd5db71c65f in ??? () at /usr/lib/x86_64-linux-gnu/libQt6QuickLayouts.so.6
#12 0x00007fd5db71f6d8 in ??? () at /usr/lib/x86_64-linux-gnu/libQt6QuickLayouts.so.6
#13 0x00007fd632829714 in QQuickItemPrivate::itemChange(QQuickItem::ItemChange, QQuickItem::ItemChangeData const&) () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#14 0x00007fd632829ac1 in QQuickItemPrivate::setEffectiveVisibleRecur(bool) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#15 0x00007fd632829a91 in QQuickItemPrivate::setEffectiveVisibleRecur(bool) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#16 0x00007fd632829a91 in QQuickItemPrivate::setEffectiveVisibleRecur(bool) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#17 0x00007fd632829a91 in QQuickItemPrivate::setEffectiveVisibleRecur(bool) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#18 0x00007fd632832b4f in QQuickItem::setParentItem(QQuickItem*) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#19 0x00007fd631b46823 in QQuickPopupPrivate::setWindow(QQuickWindow*) ()
    at /usr/lib/x86_64-linux-gnu/libQt6QuickTemplates2.so.6
#20 0x00007fd637c1222e in ??? () at /usr/lib/x86_64-linux-gnu/libQt6Core.so.6
#21 0x00007fd6328185b4 in QQuickItem::windowChanged(QQuickWindow*) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#22 0x00007fd63282f4ec in QQuickItemPrivate::derefWindow() ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#23 0x00007fd63282f498 in QQuickItemPrivate::derefWindow() ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#24 0x00007fd63282f498 in QQuickItemPrivate::derefWindow() ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#25 0x00007fd63282f498 in QQuickItemPrivate::derefWindow() ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#26 0x00007fd63282f498 in QQuickItemPrivate::derefWindow() ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#27 0x00007fd63282f498 in QQuickItemPrivate::derefWindow() ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#28 0x00007fd63282f498 in QQuickItemPrivate::derefWindow() ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#29 0x00007fd63282f498 in QQuickItemPrivate::derefWindow() ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#30 0x00007fd63282f498 in QQuickItemPrivate::derefWindow() ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#31 0x00007fd632bef07d in QQuickShaderEffectSource::itemChange(QQuickItem::ItemChange, QQuickItem::ItemChangeData const&) () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#32 0x00007fd63282f4ec in QQuickItemPrivate::derefWindow() () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#33 0x00007fd632be192d in ??? () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#34 0x00007fd632be796c in QQuickShaderEffect::itemChange(QQuickItem::ItemChange, QQuickItem::ItemChangeData const&) () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#35 0x00007fd63282f4ec in QQuickItemPrivate::derefWindow() () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#36 0x00007fd632be192d in ??? () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#37 0x00007fd632be796c in QQuickShaderEffect::itemChange(QQuickItem::ItemChange, QQuickItem::ItemChangeData const&) () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#38 0x00007fd63282f4ec in QQuickItemPrivate::derefWindow() () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#39 0x00007fd632be192d in ??? () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#40 0x00007fd632be796c in QQuickShaderEffect::itemChange(QQuickItem::ItemChange, QQuickItem::ItemChangeData const&) () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#41 0x00007fd63282f4ec in QQuickItemPrivate::derefWindow() () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#42 0x00007fd632be192d in ??? () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#43 0x00007fd632be796c in QQuickShaderEffect::itemChange(QQuickItem::ItemChange, QQuickItem::ItemChangeData const&) () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#44 0x00007fd63282f4ec in QQuickItemPrivate::derefWindow() () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#45 0x00007fd632be192d in ??? () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#46 0x00007fd632be796c in QQuickShaderEffect::itemChange(QQuickItem::ItemChange, QQuickItem::ItemChangeData const&) () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#47 0x00007fd63282f4ec in QQuickItemPrivate::derefWindow() () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#48 0x00007fd632bef07d in QQuickShaderEffectSource::itemChange(QQuickItem::ItemChange, QQuickItem::ItemChangeData const&) () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#49 0x00007fd63282f4ec in QQuickItemPrivate::derefWindow() () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#50 0x00007fd63282f498 in QQuickItemPrivate::derefWindow() () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#51 0x00007fd63282f498 in QQuickItemPrivate::derefWindow() () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#52 0x00007fd63282f498 in QQuickItemPrivate::derefWindow() () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#53 0x00007fd63282f498 in QQuickItemPrivate::derefWindow() () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#54 0x00007fd63282f498 in QQuickItemPrivate::derefWindow() () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#55 0x00007fd632835996 in QQuickItem::~QQuickItem() () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#56 0x00007fd6328f986d in ??? () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#57 0x00007fd6328f4862 in QQuickWindow::~QQuickWindow() () at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#58 0x00007fd631bb6c99 in ??? () at /usr/lib/x86_64-linux-gnu/libQt6QuickTemplates2.so.6
#59 0x00007fd639942f9e in QQmlApplicationEnginePrivate::cleanUp() () at /usr/lib/x86_64-linux-gnu/libQt6Qml.so.6
#60 0x00007fd639942fdd in QQmlApplicationEngine::~QQmlApplicationEngine() () at /usr/lib/x86_64-linux-gnu/libQt6Qml.so.6
#61 0x00007fd639943005 in QQmlApplicationEngine::~QQmlApplicationEngine() () at /usr/lib/x86_64-linux-gnu/libQt6Qml.so.6
#62 0x00007fd637c09b5d in QObjectPrivate::deleteChildren() () at /usr/lib/x86_64-linux-gnu/libQt6Core.so.6
#63 0x00007fd637c0ea32 in QObject::~QObject() () at /usr/lib/x86_64-linux-gnu/libQt6Core.so.6
#64 0x000055d646e77957 in ??? ()
#65 0x00007fd63742b3c8 in __libc_start_call_main () at /usr/lib/x86_64-linux-gnu/libc.so.6
#66 0x00007fd63742b48b in __libc_start_main () at /usr/lib/x86_64-linux-gnu/libc.so.6


SOFTWARE/OS VERSIONS
Operating System: KDE Linux 2025-11-13
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.20.0
Qt Version: 6.10.0
Kernel Version: 6.17.7-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7840U w/ Radeon™ 780M Graphics
Memory: 17 GB of RAM (16.0 GB usable)
Graphics Processor: AMD Radeon 780M Graphics
Comment 1 Bug Janitor Service 2025-11-14 22:58:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/dragon/-/merge_requests/64
Comment 2 Harald Sitter 2025-11-14 23:43:06 UTC
Git commit b3f493c96c4cedde3557b1f4a6cb4ae570cfc723 by Harald Sitter.
Committed on 14/11/2025 at 22:56.
Pushed by sitter into branch 'master'.

main: don't keep the engine as child of the app

it causes crashes and is entirely pointless anyway. put it on the stack
instead

M  +4    -4    src/main.cpp

https://invent.kde.org/multimedia/dragon/-/commit/b3f493c96c4cedde3557b1f4a6cb4ae570cfc723
Comment 3 Harald Sitter 2025-11-19 06:03:17 UTC
*** Bug 511615 has been marked as a duplicate of this bug. ***