main: don't keep the engine as child of the app

it causes crashes and is entirely pointless anyway. put it on the stack
instead

BUG: 512085


(cherry picked from commit b3f493c96c4cedde3557b1f4a6cb4ae570cfc723)

Co-authored-by: Harald Sitter <sitter@kde.org>